# GitHubNotificationsBot

./: Cargo.toml  Containerfile  Dockerfile  README.md  docker-compose.yaml  setup.py
.github/workflows/: publish-image.yml
bot/: github_api.py  login.py  main.py  matrix_client.py  telegram_client.py
src/: main.rs
