[package]
name = "bot"
version = "0.1.0"
authors = ["Hendrik <git@h3ndrk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# futures = "0.3.8"
# tokio = { version = "0.3.5", features = ["rt-multi-thread"] }

# [dev-dependencies]
# tokio = { version = "0.3.5", features = ["macros"] }

[dependencies]
# futures = "0.3"
# telegram-bot = "0.8"
# tokio = { version = "0.2", features = ["fs", "macros"]}

teloxide = "0.3"
teloxide-macros = "0.3"

log = "0.4.8"
pretty_env_logger = "0.4.0"

tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }

ruma-client = "0.4"
ruma-client-api = "0.9"
ruma-identifiers = "0.17"
ruma-events = "0.21"

# [dev-dependencies]
# tracing-subscriber = "0.1.5"
# tokio = { version = "0.2", features = ["macros", "time", "fs"] }
